# listenbrainz-poweramp

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/example/listenbrainzpoweramp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/listenbrainzpoweramp/: AutoStartReceiver.kt  ForegroundService.kt  SettingsActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/example/listenbrainzpoweramp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lbp_native/: Cargo.toml
lbp_native/src/: lib.rs
