[package]
name = "lbp_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lbp_native"
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.13.3"
jni = "0.21.1"
log = "0.4.20"
log-panics = "2.1.0"
memchr = "2.5.0"
num_enum = "0.7.0"
parking_lot = "0.12.1"
polling = "2.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
symphonia = { git = "https://github.com/StratusFearMe21/Symphonia", features = ["all"] }
ureq = { version = "2.7.1", default-features = false, features = ["tls", "json"] }

[profile.release]
lto = true
codegen-units = 1
