[package]
name = "lbp_native"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lbp_native"
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.14.1"
bitflags = "2.4.0"
flume = { version = "0.11.0", default-features = false }
jni = "0.21.1"
log = "0.4.20"
memchr = "2.5.0"
num_enum = "0.7.0"
parking_lot = "0.12.1"
regex = "1.10.2"
reqwest = { version = "0.12.15",default-features = false, features = ["charset", "http2", "rustls-tls", "gzip", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
symphonia = { git = "https://github.com/StratusFearMe21/Symphonia", features = ["all"] }
tokio = { version = "1.45.0", features = ["rt", "macros"] }

[profile.release]
lto = true
codegen-units = 1
